--- a/app/src/main/res/layout/fragment_mc_edit.xml
+++ b/app/src/main/res/layout/fragment_mc_edit.xml
@@ -9,8 +9,8 @@
         android:id="@+id/edit_mc_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="61dp"
-        android:layout_marginTop="83dp"
+        android:layout_marginStart="50dp"
+        android:layout_marginTop="50dp"
         android:text="TextView"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -19,11 +19,21 @@
         android:id="@+id/edit_mc_address_field"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="61dp"
-        android:layout_marginTop="146dp"
+        android:layout_marginStart="50dp"
+        android:layout_marginTop="20dp"
         android:ems="10"
         android:inputType="textPersonName"
         android:text="Name"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/edit_mc_name" />
+
+    <Button
+        android:id="@+id/mc_save"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="50dp"
+        android:layout_marginTop="20dp"
+        android:text="Сохранить"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/edit_mc_address_field" />
 </androidx.constraintlayout.widget.ConstraintLayout>
