--- a/app/src/main/res/layout/fragment_add_room.xml
+++ b/app/src/main/res/layout/fragment_add_room.xml
@@ -16,28 +16,28 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <EditText
-        android:id="@+id/editTextTextPersonName3"
+        android:id="@+id/inputNameRoomCreate"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="50dp"
         android:layout_marginTop="10dp"
         android:ems="10"
+        android:hint="Название"
         android:inputType="textPersonName"
-        android:text="Название"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView2" />
 
     <EditText
-        android:id="@+id/editTextTextPersonName4"
+        android:id="@+id/inputContentRoomCreate"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="50dp"
         android:layout_marginTop="10dp"
         android:ems="10"
-        android:inputType="textPersonName"
-        android:text="Площадь в кв. метрах"
+        android:hint="Площадь в кв. метрах"
+        android:inputType="number"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName3" />
+        app:layout_constraintTop_toBottomOf="@+id/inputNameRoomCreate" />
 
     <Button
         android:id="@+id/button6"
@@ -47,5 +47,6 @@
         android:layout_marginTop="10dp"
         android:text="Сохранить"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName4" />
+        app:layout_constraintTop_toBottomOf="@+id/inputContentRoomCreate" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
