* edit mc * get actual data from esp

--- a/app/src/main/res/layout/fragment_mc_edit.xml
+++ b/app/src/main/res/layout/fragment_mc_edit.xml
@@ -23,7 +23,7 @@
         android:layout_marginTop="20dp"
         android:ems="10"
         android:inputType="textPersonName"
-        android:text="Name"
+        android:hint="Адрес"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/edit_mc_name" />
 
@@ -31,9 +31,21 @@
         android:id="@+id/mc_save"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="50dp"
-        android:layout_marginTop="20dp"
+        android:layout_marginStart="64dp"
+        android:layout_marginTop="10dp"
         android:text="Сохранить"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/edit_mc_short_name_field" />
+
+    <EditText
+        android:id="@+id/edit_mc_short_name_field"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="50dp"
+        android:layout_marginTop="10dp"
+        android:ems="10"
+        android:inputType="textPersonName"
+        android:hint="Имя"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/edit_mc_address_field" />
 </androidx.constraintlayout.widget.ConstraintLayout>
