--- a/app/src/main/res/layout/mc_card.xml
+++ b/app/src/main/res/layout/mc_card.xml
@@ -21,7 +21,7 @@
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:orientation="horizontal">
 
             <TextView
@@ -33,13 +33,29 @@
                 android:textColor="@color/cardview_dark_background"
                 android:textSize="30dp" />
 
-            <TextView
-                android:id="@+id/address"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="192.168.1.143"
-                android:textColor="@color/cardview_dark_background"
-                android:textSize="30dp" />
+            <LinearLayout
+                android:layout_width="175dp"
+                android:layout_height="51dp"
+                android:orientation="vertical"
+                android:padding="5dp">
+
+                <TextView
+                    android:id="@+id/short_name"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="short name"
+                    android:textColor="@color/cardview_dark_background"
+                    android:textSize="18dp" />
+
+                <TextView
+                    android:id="@+id/address"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="192.168.1.143"
+                    android:textColor="@color/cardview_dark_background"
+                    android:textSize="15dp" />
+            </LinearLayout>
+
 
             <Button
                 android:id="@+id/button"
