--- a/app/src/main/res/layout/bottom_sheet.xml
+++ b/app/src/main/res/layout/bottom_sheet.xml
@@ -1,41 +1,56 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+              xmlns:app="http://schemas.android.com/apk/res-auto"
+              app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior"
+              app:behavior_hideable="true"
               android:orientation="vertical"
               android:layout_width="match_parent"
-              android:layout_height="match_parent"
-              android:padding="16dp">
+              android:layout_height="match_parent">
     <TextView
             android:id="@+id/bottom_sheet_title"
-            android:layout_width="wrap_content"
+            android:layout_width="fill_parent"
             android:layout_height="wrap_content"
+            android:padding="10dp"
+            android:layout_marginHorizontal="5dp"
             android:text="Настройки"
-            android:textSize="25dp" />
-
-    <Button
-            android:id="@+id/btn_history"
-            style="?attr/borderlessButtonStyle"
+            android:textSize="20dp" />
+    <com.google.android.material.divider.MaterialDivider
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:textAlignment="viewStart"
-            android:drawableLeft="@drawable/timeline_24px"
-            android:textColor="@color/cardview_dark_background"
-            android:text="История изменений" />
-    <Button
-            android:id="@+id/btn_microcontroller"
-            style="?attr/borderlessButtonStyle"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:textAlignment="viewStart"
-            android:drawableLeft="@drawable/ic_dashboard_black_24dp"
-            android:textColor="@color/cardview_dark_background"
-            android:text="Микроконтроллеры" />
-    <Button
-            android:id="@+id/btn_mechanism"
-            style="?attr/borderlessButtonStyle"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:textAlignment="viewStart"
-            android:drawableLeft="@drawable/room_preferences_24px"
-            android:textColor="@color/cardview_dark_background"
-            android:text="Механизмы" />
+            android:layout_height="1dp"
+            android:layout_marginHorizontal="5dp"
+            android:layout_marginVertical="0dp"
+            />
+    <LinearLayout android:orientation="vertical"
+                  android:layout_width="match_parent"
+                  android:layout_height="match_parent"
+                  app:cornerRadius="4dp"
+            >
+        <Button
+                android:id="@+id/btn_history"
+                style="?attr/borderlessButtonStyle"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:textAlignment="viewStart"
+                android:drawableLeft="@drawable/outline_history_24"
+                android:textColor="@color/cardview_dark_background"
+                android:text="История изменений" />
+        <Button
+                android:id="@+id/btn_microcontroller"
+                style="?attr/borderlessButtonStyle"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:textAlignment="viewStart"
+                android:drawableLeft="@drawable/ic_dashboard_black_24dp"
+                android:textColor="@color/cardview_dark_background"
+                android:text="Микроконтроллеры" />
+        <Button
+                android:id="@+id/btn_mechanism"
+                style="?attr/borderlessButtonStyle"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:textAlignment="viewStart"
+                android:drawableLeft="@drawable/room_preferences_24px"
+                android:textColor="@color/cardview_dark_background"
+                android:text="Механизмы" />
+    </LinearLayout>
 </LinearLayout>
