--- a/app/src/main/res/layout/room_card.xml
+++ b/app/src/main/res/layout/room_card.xml
@@ -12,125 +12,167 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:id="@+id/card"
-            android:clickable="true"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:cardCornerRadius="3dp"
-            app:cardElevation="5dp"
-            app:cardMaxElevation="5dp"
             app:contentPadding="15dp"
+            app:contentPaddingTop="7dp"
+            app:contentPaddingBottom="7dp"
+            app:cardElevation="1dp"
+            app:strokeWidth="0dp"
+            app:cardCornerRadius="0dp"
+            android:clickable="true"
             app:cardUseCompatPadding="true">
 
         <LinearLayout
+                android:id="@+id/card_common_layout"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:orientation="vertical"
+                android:orientation="horizontal"
                 >
 
-            <TextView
-                    android:id="@+id/card_title"
+            <LinearLayout
+                    android:id="@+id/card_main_layout"
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="Заголовок"
-                    android:textSize="25dp"/>
-
-            <LinearLayout
-                    android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:orientation="horizontal"
+                    android:orientation="vertical"
                     >
 
                 <TextView
-                        android:id="@+id/card_temp"
+                        android:id="@+id/card_title"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:textColor="@color/cardview_dark_background"
-                        android:text="+3°"
-                        android:textSize="45dp"/>
+                        android:layout_marginBottom="10dp"
+                        android:layout_marginHorizontal="5dp"
+                        android:text="Заголовок"
+                        android:textSize="22dp"/>
 
-                <ImageView
-                        android:layout_width="48dp"
-                        android:layout_height="48dp"
-                        android:src="@drawable/device_thermostat_48px"
-                        android:layout_marginStart="0dp"
-                        android:layout_marginVertical="8dp"
-                        app:tint="@color/cardview_dark_background"/>
+                <LinearLayout
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:orientation="horizontal"
+                        >
+
+                    <LinearLayout
+                            android:id="@+id/temp_layout"
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
+                            android:orientation="horizontal"
+                            >
+
+                        <ImageView
+                                android:layout_width="32dp"
+                                android:layout_height="32dp"
+                                android:src="@drawable/device_thermostat_48px"
+                                android:layout_marginStart="0dp"
+                                android:layout_marginVertical="8dp"
+                                />
+
+                        <TextView
+                                android:id="@+id/card_temp"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_marginVertical="10dp"
+                                android:layout_marginEnd="10dp"
+                                android:text="+3°"
+                                android:textSize="20dp"/>
+                    </LinearLayout>
+
+                    <LinearLayout
+                            android:id="@+id/humidity_layout"
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
+                            android:orientation="horizontal"
+                            >
+
+                        <ImageView
+                                android:layout_width="32dp"
+                                android:layout_height="32dp"
+                                android:src="@drawable/ic__humidity"
+                                android:layout_marginStart="0dp"
+                                android:layout_marginVertical="8dp"
+                                />
+
+                        <TextView
+                                android:id="@+id/card_humidity"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_marginVertical="10dp"
+                                android:layout_marginEnd="10dp"
+                                android:text="70%"
+                                android:textSize="20dp"/>
+                    </LinearLayout>
+
+                    <LinearLayout
+                            android:id="@+id/co2_layout"
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
+                            android:orientation="horizontal"
+                            >
+
+                        <ImageView
+                                android:layout_width="32dp"
+                                android:layout_height="32dp"
+                                android:src="@drawable/ic_co2"
+                                android:layout_marginStart="0dp"
+                                android:layout_marginVertical="8dp"
+                                />
+
+                        <TextView
+                                android:id="@+id/card_co2"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_marginVertical="10dp"
+                                android:layout_marginEnd="10dp"
+                                android:text="20%"
+                                android:textSize="20dp"/>
+                    </LinearLayout>
+
+                    <LinearLayout
+                            android:id="@+id/light_layout"
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
+                            android:orientation="horizontal"
+                            >
+
+                        <ImageView
+                                android:layout_width="32dp"
+                                android:layout_height="32dp"
+                                android:src="@drawable/ic_light"
+                                android:layout_marginStart="0dp"
+                                android:layout_marginVertical="8dp"
+                                />
+
+                        <TextView
+                                android:id="@+id/card_light"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_marginVertical="10dp"
+                                android:layout_marginEnd="10dp"
+                                android:text="500"
+                                android:textSize="20dp"/>
+                    </LinearLayout>
+                </LinearLayout>
             </LinearLayout>
 
             <LinearLayout
+                    android:id="@+id/card_chevron_layout"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:orientation="horizontal"
+                    android:paddingTop="0dp"
+                    android:orientation="vertical"
+                    android:gravity="right"
                     >
 
                 <ImageView
                         android:layout_width="24dp"
-                        android:layout_height="24dp"
-                        android:src="@drawable/humidity_mid_48px"
+                        android:layout_height="fill_parent"
+                        android:src="@drawable/chevron_right_48px"
                         android:layout_marginStart="0dp"
-                        android:layout_marginVertical="8dp"
+                        android:layout_marginVertical="0dp"
+                        android:gravity="left"
                         />
-
-                <TextView
-                        android:id="@+id/card_humidity"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginVertical="8dp"
-                        android:layout_marginEnd="10dp"
-                        android:text="70%"
-                        android:textSize="18dp"/>
-
-                <ImageView
-                        android:layout_width="24dp"
-                        android:layout_height="24dp"
-                        android:src="@drawable/thermostat_carbon_48px"
-                        android:layout_marginStart="0dp"
-                        android:layout_marginVertical="8dp"
-                        />
-
-                <TextView
-                        android:id="@+id/card_co2"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginVertical="8dp"
-                        android:layout_marginEnd="10dp"
-                        android:text="20%"
-                        android:textSize="18dp"/>
-
-                <ImageView
-                        android:layout_width="24dp"
-                        android:layout_height="24dp"
-                        android:src="@drawable/lightbulb_48px"
-                        android:layout_marginStart="0dp"
-                        android:layout_marginVertical="8dp"
-                        />
-
-                <TextView
-                        android:id="@+id/card_light"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginVertical="8dp"
-                        android:layout_marginEnd="10dp"
-                        android:text="500"
-                        android:textSize="18dp"/>
-            </LinearLayout>
-
-            <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:orientation="horizontal"
-                    >
-
-                <Button
-                        android:id="@+id/btn_settings"
-                        style="?attr/borderlessButtonStyle"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="Параметры"/>
             </LinearLayout>
         </LinearLayout>
-
     </com.google.android.material.card.MaterialCardView>
-
 </RelativeLayout>
