--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -1,19 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu xmlns:android="http://schemas.android.com/apk/res/android">
+<menu xmlns:app="http://schemas.android.com/apk/res-auto"
+      xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item
             android:id="@+id/navigation_room"
             android:icon="@drawable/ic_home_black_24dp"
-            android:title="@string/title_room"/>
+            android:title="@string/title_room"
+            android:enabled="true"
+            app:showAsAction="ifRoom"/>
 
     <item
             android:id="@+id/navigation_microcontroller"
             android:icon="@drawable/ic_dashboard_black_24dp"
-            android:title="@string/title_microcontroller"/>
+            android:title="@string/title_microcontroller"
+            android:enabled="true"
+            app:showAsAction="ifRoom"/>
 
     <item
             android:id="@+id/navigation_settings"
             android:icon="@drawable/settings_48px"
-            android:title="@string/title_settings"/>
+            android:title="@string/title_settings"
+            android:enabled="true"
+            app:showAsAction="ifRoom"/>
 
 </menu>
