--- a/app/src/main/res/layout/fragment_report.xml
+++ b/app/src/main/res/layout/fragment_report.xml
@@ -41,9 +41,7 @@
                 android:id="@+id/pdfView"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:adjustViewBounds="true"
-                android:scaleType="centerCrop"
-                android:background="@android:color/white"
+                android:background="@color/white"
                 />
     </LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
